<resources>
    <string name="app_name">Challenge Chapter 3 Binar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="screen_1">Screen 1</string>
    <string name="go_to_screen_2">Go To Screen 2</string>
    <string name="screen_2">Screen 2</string>
    <string name="masukkan_nama">Masukkan Nama</string>
    <string name="go_to_screen_3">Go To Screen 3</string>
    <string name="screen_3">Screen 3</string>
    <string name="nama_kamu">Nama Kamu</string>
    <string name="detail_peralatan">Detail Peralatan</string>
    <string name="rincian_biaya_listrik">Rincian Biaya Listrik</string>
    <string name="biaya_listrik_per_hari">Biaya Listrik Per Hari</string>
    <string name="biaya_listrik_per_bulan">Biaya Listrik Per Bulan</string>
    <string name="biaya_listrik_per_tahun">Biaya Listrik Per Tahun</string>
    <string name="go_to_screen_4">Go To Screen 4</string>
    <string name="screen_4">Screen 4</string>
    <string name="nama_peralatan_elektronik">Nama Peralatan Elektronik</string>
    <string name="daya_alat_elektronik_watt">Daya alat elektronik (Watt)</string>
    <string name="pemakaian_alat_elektronik_jam_hari">Pemakaian alat elektronik (Jam/Hari)</string>
    <string name="biaya_per_kwh_rp">Biaya Per kWh (Rp)</string>
    <string name="catatan">*Catatan \n- Daya Listrik 450 watt Subsidi : Rp169/kWh \n- Daya Listrik900 watt : Rp1352/kWh \n- Daya Listrik 1300 watt+ : Rp1444.7/kWh \n- Daya Listrik Bisnis : Rp1114.74/kWh</string>
    <string name="back_to_screen_3">Back To Screen 3</string>
    <string name="header">Header</string>
    <string name="image_pln">Image PLN</string>
    <string name="melayani_dengan_sepenuh_hati">Melayani Dengan Sepenuh Hati</string>
    <string name="header_screen_2">Header Screen 2</string>
    <string name="header_screen_3">Header Screen 3</string>
    <string name="header_screen_4">Header Screen 4</string>
</resources>