<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FragmentScreenThree">

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:src="@drawable/header"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/header_screen_3" />

    <TextView
        android:id="@+id/tv_screen_three"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/screen_3"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"/>

    <TextView
        android:id="@+id/tv_nama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="24sp"
        android:text="@string/nama_kamu"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-condensed-medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_detail"
        android:layout_marginBottom="12dp"/>

    <TextView
        android:id="@+id/tv_detail"
        android:layout_width="384dp"
        android:layout_height="wrap_content"
        android:text="@string/detail_peralatan"
        android:textStyle="bold"
        android:textSize="18sp"
        android:fontFamily="sans-serif-condensed-medium"
        android:background="@drawable/edit_text_bg"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_biaya_listrik"
        android:layout_marginBottom="6dp"/>

    <TextView
        android:id="@+id/tv_biaya_listrik"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rincian_biaya_listrik"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:fontFamily="sans-serif-condensed-medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_biaya_per_hari"
        android:layout_marginBottom="6dp"/>

    <TextView
        android:id="@+id/tv_biaya_per_hari"
        android:layout_width="384dp"
        android:layout_height="wrap_content"
        android:text="@string/biaya_listrik_per_hari"
        android:textStyle="bold"
        android:textSize="18sp"
        android:fontFamily="sans-serif-condensed-medium"
        android:background="@drawable/edit_text_bg"
        android:paddingStart="15dp"
        android:paddingEnd="5dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_biaya_per_bulan"
        android:layout_marginBottom="6dp"/>

    <TextView
        android:id="@+id/tv_biaya_per_bulan"
        android:layout_width="384dp"
        android:layout_height="wrap_content"
        android:text="@string/biaya_listrik_per_bulan"
        android:textStyle="bold"
        android:textSize="18sp"
        android:fontFamily="sans-serif-condensed-medium"
        android:background="@drawable/edit_text_bg"
        android:paddingStart="15dp"
        android:paddingEnd="5dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_biaya_Per_Tahun"
        android:layout_marginBottom="6dp"/>

    <TextView
        android:id="@+id/tv_biaya_Per_Tahun"
        android:layout_width="384dp"
        android:layout_height="wrap_content"
        android:text="@string/biaya_listrik_per_tahun"
        android:textStyle="bold"
        android:textSize="18sp"
        android:fontFamily="sans-serif-condensed-medium"
        android:background="@drawable/edit_text_bg"
        android:paddingStart="15dp"
        android:paddingEnd="5dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_screen_three"
        android:layout_marginBottom="12dp"/>

    <Button
        android:id="@+id/btn_screen_three"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:text="@string/go_to_screen_4"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@drawable/button_bg"
        app:layout_constraintTop_toBottomOf="@id/tv_screen_three"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>