<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FragmentScreenFour">

    <!-- TODO: Update blank fragment layout -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:src="@drawable/header"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/header_screen_4" />

    <TextView
        android:id="@+id/tv_screen_four"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/screen_4"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"/>

    <EditText
        android:id="@+id/et_alat_elektronik"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:hint="@string/nama_peralatan_elektronik"
        android:inputType="text"
        android:textSize="16sp"
        android:fontFamily="sans-serif-condensed-medium"
        android:background="@drawable/edit_text_bg"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/et_watt"
        android:layout_marginBottom="12dp"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/et_watt"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:hint="@string/daya_alat_elektronik_watt"
        android:inputType="numberDecimal"
        android:textSize="16sp"
        android:fontFamily="sans-serif-condensed-medium"
        android:background="@drawable/edit_text_bg"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/et_jam"
        android:layout_marginBottom="12dp"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/et_jam"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:hint="@string/pemakaian_alat_elektronik_jam_hari"
        android:inputType="numberDecimal"
        android:textSize="16sp"
        android:fontFamily="sans-serif-condensed-medium"
        android:background="@drawable/edit_text_bg"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/et_biaya"
        android:layout_marginBottom="12dp"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/et_biaya"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:hint="@string/biaya_per_kwh_rp"
        android:inputType="numberDecimal"
        android:textSize="16sp"
        android:fontFamily="sans-serif-condensed-medium"
        android:background="@drawable/edit_text_bg"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_catatan"
        android:layout_marginBottom="12dp"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/tv_catatan"
        android:layout_width="384dp"
        android:layout_height="wrap_content"
        android:text="@string/catatan"
        android:textStyle="bold"
        android:textSize="17sp"
        android:fontFamily="sans-serif-condensed-medium"
        android:background="@drawable/edit_text_bg"
        android:paddingStart="20dp"
        android:paddingEnd="2dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_screen_four"
        android:layout_marginBottom="32dp" />

    <Button
        android:id="@+id/btn_screen_four"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:text="@string/back_to_screen_3"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@drawable/button_bg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="234dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>