<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".FragmentScreenTwo">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:id="@+id/tv_screen_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/screen_2"
        android:textStyle="bold"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="24dp"/>

    <EditText
        android:id="@+id/et_nama"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_screen_two"
        android:layout_marginBottom="12dp"
        android:hint="@string/masukkan_nama"
        android:textSize="16sp"
        android:background="@drawable/edit_text_bg"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:inputType="textPersonName"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/btn_screen_two"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:text="@string/go_to_screen_3"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@drawable/button_bg"
        app:layout_constraintTop_toBottomOf="@id/tv_screen_two"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>